--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "url": "https://github.com/adamrenklint/asimov-test/issues"
   },
   "dependencies": {
-    "mocha": "~1.18.2",
+    "asimov-core": "0.1.0",
     "chai": "^1.9.1",
+    "colors": "^0.6.2",
+    "lodash": "^2.4.1",
+    "mocha": "~1.18.2",
     "sinon": "^1.9.1",
     "sinon-chai": "^2.5.0",
     "wunderbits.core": "^0.1.7",
-    "zombie": "^2.0.0-alpha31",
-    "asimov-core": "0.1.0"
+    "zombie": "^2.0.0-alpha31"
   },
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha tests/**/*.test.js"
