--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asimov-test",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Testing toolkit for asimov.js",
   "main": "index.js",
   "author": "Adam Renklint <adam@renklint.com> (http://adamrenklint.com)",
@@ -24,6 +24,6 @@
     "zombie": "^2.0.0-alpha31"
   },
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha tests/**/*.test.js"
+    "test": "node bin/test"
   }
 }
