--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asimov-test",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Testing toolkit for asimov.js",
   "main": "index.js",
   "author": "Adam Renklint <adam@renklint.com> (http://adamrenklint.com)",
@@ -13,15 +13,15 @@
     "url": "https://github.com/adamrenklint/asimov-test/issues"
   },
   "dependencies": {
-    "asimov-core": "^0.3.0",
-    "chai": "^1.9.1",
-    "colors": "^0.6.2",
-    "lodash": "^2.4.1",
-    "mocha": "~1.18.2",
-    "sinon": "^1.9.1",
-    "sinon-chai": "^2.5.0",
-    "wunderbits.core": "^0.1.7",
-    "zombie": "^2.0.0-alpha31"
+    "asimov-core": "^0.4.0",
+    "chai": "^2.1.0",
+    "colors": "^1.0.3",
+    "lodash": "^3.3.1",
+    "mocha": "~2.1.0",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.7.0",
+    "wunderbits.core": "^0.1.14",
+    "zombie": "^2.5.1"
   },
   "scripts": {
     "test": "node bin/test"
