--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asimov-test",
-  "version": "0.4.0",
+  "version": "0.5.0-beta1",
   "description": "Testing toolkit for asimov.js",
   "main": "index.js",
   "author": "Adam Renklint <adam@renklint.com> (http://adamrenklint.com)",
@@ -13,15 +13,15 @@
     "url": "https://github.com/adamrenklint/asimov-test/issues"
   },
   "dependencies": {
-    "asimov-core": "^0.4.0",
-    "chai": "^2.1.0",
-    "colors": "^1.0.3",
-    "lodash": "^3.3.1",
-    "mocha": "~2.1.0",
-    "sinon": "^1.12.2",
-    "sinon-chai": "^2.7.0",
-    "wunderbits.core": "^0.1.14",
-    "zombie": "^2.5.1"
+    "asimov-core": "0.5.0-beta1",
+    "chai": "4.1.0",
+    "colors": "1.1.2",
+    "lodash": "4.17.4",
+    "mocha": "3.4.2",
+    "sinon": "2.3.7",
+    "sinon-chai": "2.11.0",
+    "wunderbits.core": "1.1.0",
+    "zombie": "5.0.7"
   },
   "scripts": {
     "test": "node bin/test"
